[project]
name = "netbox-active-passive-sync"
version = "0.1.0"
description = "Periodic active-to-passive replication for paired NetBox clusters"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sync_service*"]

[tool.setuptools.package-data]
sync_service = ["static/*"]
